--- a/app/src/main/res/layout/activity_require_detail.xml
+++ b/app/src/main/res/layout/activity_require_detail.xml
@@ -16,48 +16,12 @@
         android:textColor="#000"
         android:textSize="50dp"
         android:hint="df"/>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:weightSum="10"
+        android:id="@+id/dyanmic"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:gravity="center"
-            android:text=" ENTER APPLICANT AADHAR NUMBER "
-            android:textColor="#000"
-            android:textSize="25dp"
-            android:hint="df"/>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:weightSum="10"
-            android:orientation="horizontal">
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:inputType="number"
-                android:hint="Enter ADHAR NO"
-                android:textColor="#000"
-                android:layout_gravity="start"
-                android:layout_weight="8"
-                android:id="@+id/adharNo"
-                android:gravity="center"/>
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/buttonLogin"
-                android:layout_gravity="end"
-                android:layout_weight="2"
-                android:layout_below="@+id/check"
-                android:text="Check"/>
-        </LinearLayout>
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
@@ -71,8 +35,15 @@
         android:layout_height="wrap_content"
         android:background="#000000"
         android:layout_marginBottom="2dp"
-        android:text="Go back"
+        android:text="Proced to step 2"
         android:textColor="#FFFFFF"
         android:layout_gravity="bottom"/>
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_gravity="center|bottom"
+        android:layout_marginBottom="20dp"
+        android:visibility="gone" />
 
 </LinearLayout>
