--- a/app/src/main/res/layout/activity_require_document.xml
+++ b/app/src/main/res/layout/activity_require_document.xml
@@ -42,5 +42,12 @@
         android:text="Go back"
         android:textColor="#FFFFFF"
         android:layout_gravity="bottom"/>
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_gravity="center"
+        android:layout_marginBottom="20dp"
+        android:visibility="gone" />
 
 </LinearLayout>
