--- a/app/src/main/res/layout/document_list.xml
+++ b/app/src/main/res/layout/document_list.xml
@@ -31,7 +31,6 @@
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
                 android:gravity="center"
-                android:text=" ENTER APPLICANT"
                 android:textColor="#000"
                 android:textSize="25dp"
                 android:hint="df"/>
@@ -73,7 +72,7 @@
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
                 android:gravity="center"
-                android:text=" ENTER APPLICANT"
+                android:visibility="gone"
                 android:textColor="#000"
                 android:textSize="25dp"
                 android:hint="df"/>
