--- a/app/src/main/res/layout/document_list.xml
+++ b/app/src/main/res/layout/document_list.xml
@@ -50,7 +50,7 @@
             <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:inputType="number"
+                android:inputType="text"
                 android:textColor="#000"
                 android:layout_gravity="end"
                 android:layout_weight="8"
