start seprate firebase function

--- a/app/src/main/res/layout/activity_require_detail.xml
+++ b/app/src/main/res/layout/activity_require_detail.xml
@@ -19,6 +19,34 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:weightSum="10"
+        android:orientation="horizontal">
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:layout_weight="8"
+        android:hint="Enter APPLICANT ADDHAR NUMBER"
+        android:textColor="#000"
+        android:ems="10"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="25dp"
+        android:id="@+id/addharId"
+        android:gravity="center"/>
+        <Button
+            android:id="@+id/check"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#000000"
+            android:layout_marginBottom="2dp"
+            android:layout_weight="2"
+            android:text="check data"
+            android:textColor="#FFFFFF"
+            android:layout_gravity="bottom"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/dyanmic"
         android:orientation="vertical">
 
