--- a/app/src/main/res/layout/single_document.xml
+++ b/app/src/main/res/layout/single_document.xml
@@ -7,8 +7,7 @@
     android:orientation="vertical">
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_menu_gallery"
+        android:layout_height="250dp"
         android:contentDescription="/my_image_description"/>
     <LinearLayout
         android:layout_width="match_parent"
