--- a/app/src/main/res/layout/single_detail.xml
+++ b/app/src/main/res/layout/single_detail.xml
@@ -53,4 +53,22 @@
          android:layout_gravity="end"/>
 
  </LinearLayout>
+    <Button
+        android:id="@+id/upload"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="#000000"
+        android:layout_marginBottom="2dp"
+        android:text="EDIT"
+        android:visibility="gone"
+        android:layout_weight="2"
+        android:textColor="#FFFFFF"
+        android:layout_gravity="end"/>
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_gravity="center"
+        android:layout_marginBottom="20dp"
+        android:visibility="gone" />
 </LinearLayout>
