--- a/app/src/main/res/layout/single_status.xml
+++ b/app/src/main/res/layout/single_status.xml
@@ -26,6 +26,12 @@
             android:layout_height="wrap_content"
             android:weightSum="10"
             android:orientation="vertical">
+            <TextView
+                android:id="@+id/exam_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:padding="2dp" />
             <ProgressBar
                 android:id="@+id/determinateBar"
                 style="@android:style/Widget.ProgressBar.Horizontal"
