--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -17,9 +17,9 @@
         tools:layout="@layout/activity_user_select" />
     <activity
         android:id="@+id/nav_slideshow"
-        android:name="com.savita.navigate.CanUploadDocument"
+        android:name="com.savita.navigate.UploadedDetails"
         android:label="@string/menu_gallery"
-        tools:layout="@layout/activity_can_upload_document" />
+        tools:layout="@layout/activity_uploaded_details" />
     <activity
         android:id="@+id/nav1"
         android:name="com.savita.navigate.UploadedDocument"
