--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,9 +22,9 @@
         tools:layout="@layout/activity_uploaded_details" />
     <activity
         android:id="@+id/nav1"
-        android:name="com.savita.navigate.UploadedDocument"
+        android:name="com.savita.navigate.StatusOfApplication"
         android:label="@string/menu_gallery"
-        tools:layout="@layout/activity_uploaded_document" />
+        tools:layout="@layout/activity_status_of_application" />
     <activity
         android:id="@+id/nav2"
         android:name="com.savita.navigate.StatusOfApplication"
