--- a/app/src/main/res/layout/exam.xml
+++ b/app/src/main/res/layout/exam.xml
@@ -24,15 +24,19 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:weightSum="10"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             >
             <TextView
                 android:id="@+id/exam_name"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="start"
-                android:layout_weight="8"
+                android:padding="2dp" />
+            <TextView
+                android:id="@+id/last_date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
                 android:padding="2dp" />
 
         </LinearLayout>
