--- a/app/src/main/res/menu/activity_navigation_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_drawer.xml
@@ -19,6 +19,10 @@
         <item
             android:id="@+id/nav1"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="document" />
+            android:title="Basic Document" />
+        <item
+            android:id="@+id/nav2"
+            android:icon="@drawable/ic_menu_slideshow"
+            android:title="Uploaded Document" />
     </group>
 </menu>
