--- a/app/src/main/res/layout/activity_user_select.xml
+++ b/app/src/main/res/layout/activity_user_select.xml
@@ -27,7 +27,7 @@
                 android:layout_marginTop="2dp"
                 android:layout_gravity="center"
                 android:layout_weight="2"
-                android:text="Coffee" />
+                android:visibility="gone" />
 
             <RadioButton
                 android:id="@+id/checkBox2"
@@ -37,7 +37,7 @@
                 android:layout_marginTop="2dp"
                 android:layout_gravity="center"
                 android:layout_weight="2"
-                android:text="Coffee" />
+                android:visibility="gone" />
 
             <RadioButton
                 android:id="@+id/checkBox3"
@@ -47,7 +47,7 @@
                 android:layout_marginTop="2dp"
                 android:layout_gravity="center"
                 android:layout_weight="2"
-                android:text="Coffee" />
+                android:visibility="gone" />
         </RadioGroup>
 
         <Button
