--- a/app/src/main/res/layout/activity_status_of_application.xml
+++ b/app/src/main/res/layout/activity_status_of_application.xml
@@ -57,6 +57,7 @@
             android:background="#000000"
             android:layout_marginBottom="1dp"
             android:text="Go back"
+            android:visibility="gone"
             android:textColor="#FFFFFF"
             android:layout_weight="1"
             android:layout_gravity="bottom"/>
