--- a/app/src/main/res/layout/activity_user_select.xml
+++ b/app/src/main/res/layout/activity_user_select.xml
@@ -58,6 +58,7 @@
             android:layout_marginBottom="1dp"
             android:text="Go back"
             android:textColor="#FFFFFF"
+            android:visibility="gone"
             android:layout_weight="1"
             android:layout_gravity="bottom"/>
     </LinearLayout>
