--- a/app/src/main/res/layout/activity_status_of_application.xml
+++ b/app/src/main/res/layout/activity_status_of_application.xml
@@ -27,7 +27,7 @@
                 android:layout_marginTop="2dp"
                 android:layout_gravity="center"
                 android:layout_weight="2"
-                android:text="Coffee" />
+                android:visibility="gone" />
 
             <RadioButton
                 android:id="@+id/checkBox2"
@@ -37,7 +37,7 @@
                 android:layout_marginTop="2dp"
                 android:layout_gravity="center"
                 android:layout_weight="2"
-                android:text="Coffee" />
+                android:visibility="gone" />
 
             <RadioButton
                 android:id="@+id/checkBox3"
@@ -47,7 +47,7 @@
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="2dp"
                 android:layout_weight="2"
-                android:text="Coffee" />
+                android:visibility="gone" />
         </RadioGroup>
 
         <Button
@@ -57,7 +57,7 @@
             android:background="#000000"
             android:layout_marginBottom="1dp"
             android:text="Go back"
-            android:visibility="gone"
+            android:visibility="visible"
             android:textColor="#FFFFFF"
             android:layout_weight="1"
             android:layout_gravity="bottom"/>
