--- a/app/src/main/res/layout/single_document.xml
+++ b/app/src/main/res/layout/single_document.xml
@@ -54,7 +54,37 @@
             android:layout_weight="2"
             android:textColor="#FFFFFF"
             android:layout_gravity="bottom"/>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:layout_weight="8"
+            android:hint="Enter APPLICANT ADDHAR NUMBER"
+            android:textColor="#000"
+            android:ems="10"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="25dp"
+            android:id="@+id/editText"
+            android:visibility="gone"
+            android:gravity="center"/>
     </LinearLayout>
+    <Button
+        android:id="@+id/upload"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#000000"
+        android:layout_marginBottom="2dp"
+        android:text="     UPLOAD     "
+        android:textColor="#FFFFFF"
+        android:visibility="gone"
+        android:layout_gravity="bottom"/>
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone"
+        android:padding="2dp" />
     <ProgressBar
         android:id="@+id/progressBar"
         android:layout_width="30dp"
